# overlaybd

./: CMakeLists.txt  README.md  build-deb.sh
.github/workflows/: cmake.yml  release.yml
.github/workflows/release/: build.sh
CMake/: Findphoton.cmake  pack.cmake
CMake/patches/: photon-v0.6.17-ext4-uninit-bg.patch
src/: bk_download.cpp  bk_download.h  config.h  image_file.cpp  image_file.h  image_service.cpp  image_service.h  main.cpp  switch_file.cpp  switch_file.h
src/overlaybd/lsmt/: CMakeLists.txt  file.cpp  file.h  index.cpp  index.h
src/overlaybd/otel/: CMakeLists.txt  context_storage.cpp  context_storage.h  tracer_common.cpp  tracer_common.h
src/overlaybd/registryfs/: CMakeLists.txt  registryfs.cpp  registryfs.h  registryfs_v2.cpp
src/overlaybd/zfile/: compressor.cpp  zfile.cpp  zfile.h
src/tools/: overlaybd-commit.cpp
